commit after understanding

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <link rel="stylesheet" href="index.css">
 <header>
     <title>
-        I want to understand Git it. But I don't Git it.
+        I want to understand Git it. And I finally git it.
     </title>
 </header>
 <body>
     <main>
-        <h1>i want to understand... but don't<h1>
+        <h1>i want to understand... <h1>
             <p>
-                What is going on. I do not understand.
+                I believe that I understand.
             </p>
       
     </main>
